--- a/Resources/views/Checkout/address.html.twig
+++ b/Resources/views/Checkout/address.html.twig
@@ -1,58 +1,135 @@
 {% extends 'PlaCoreBundle::layout.html.twig' %}
 
 {% block content %}
-<form method=POST action="{{ path('msi_store_checkout_address') }}">
+<form class="msi_store_checkout_address" novalidate method=POST action="{{ path('msi_store_checkout_address') }}">
+{% form_theme form 'MsiStoreBundle:Checkout:address_form_theme.html.twig' %}
 <div class="row">
     <div class="span6">
         <div class="well well-small" style="padding-top: 0;padding-bottom: 0;">
+        <div class="da-form">
             <h3>Adresse de livraison</h3>
-            <a href="#">Pick an address from my account</a>
+            <a href="#" class="msi_store_checkout_load_address" data-address="shipping">Pick an address from my account</a>
             <br>
             <a class="copyaddress" data-copy-from="billing" data-copy-to="shipping" href="#">Copy billing address</a>
+            <hr>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingFirstName) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.shippingLastName) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingEmail) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingPhone) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.shippingPhoneExt) }}
+                </div>
+            </div>
+
             <br>
-            <br>
-            {{ form_widget(form.shippingFirstName) }}
-            {{ form_widget(form.shippingLastName) }}
-            <br>
-            {{ form_widget(form.shippingEmail) }}
-            <br>
-            {{ form_widget(form.shippingPhone) }}
-            {{ form_widget(form.shippingPhoneExt) }}
-            <br>
-            <br>
-            {{ form_widget(form.shippingAddress) }}
-            {{ form_widget(form.shippingCity) }}
-            <br>
-            {{ form_widget(form.shippingProvince) }}
-            {{ form_widget(form.shippingZip) }}
-            <br>
-            {{ form_widget(form.shippingCountry) }}
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingAddress) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.shippingCity) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingProvince) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.shippingZip) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.shippingCountry) }}
+                </div>
+            </div>
+        </div>
+        <div class="da-list">
+
+        </div>
         </div>
     </div>
     <div class="span6">
         <div class="well well-small" style="padding-top: 0;padding-bottom: 0;">
+        <div class="da-form">
             <h3>Adresse de facturation</h3>
-            <a href="#">Pick an address from my account</a>
+            <a href="#" class="msi_store_checkout_load_address" data-address="billing">Pick an address from my account</a>
             <br>
             <a class="copyaddress" data-copy-from="shipping" data-copy-to="billing" href="#">Copy shipping address</a>
+            <hr>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingFirstName) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.billingLastName) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingEmail) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingPhone) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.billingPhoneExt) }}
+                </div>
+            </div>
+
             <br>
-            <br>
-            {{ form_widget(form.billingFirstName) }}
-            {{ form_widget(form.billingLastName) }}
-            <br>
-            {{ form_widget(form.billingEmail) }}
-            <br>
-            {{ form_widget(form.billingPhone) }}
-            {{ form_widget(form.billingPhoneExt) }}
-            <br>
-            <br>
-            {{ form_widget(form.billingAddress) }}
-            {{ form_widget(form.billingCity) }}
-            <br>
-            {{ form_widget(form.billingProvince) }}
-            {{ form_widget(form.billingZip) }}
-            <br>
-            {{ form_widget(form.billingCountry) }}
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingAddress) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.billingCity) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingProvince) }}
+                </div>
+                <div class="span6">
+                    {{ form_widget(form.billingZip) }}
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6">
+                    {{ form_widget(form.billingCountry) }}
+                </div>
+            </div>
+        </div>
+        <div class="da-list">
+
+        </div>
         </div>
     </div>
 </div>
@@ -69,6 +146,15 @@
 <script>
 (function($) {
     "use strict";
+    $('input').popover({
+        html: true,
+        animation: false,
+        placement: 'top',
+        trigger: 'hover'
+    })
+})(jQuery);
+(function($) {
+    "use strict";
     $('a.copyaddress').on('click', function(e) {
         e.preventDefault();
         var $this = $(this);
@@ -82,6 +168,61 @@
         $('#msi_store_checkout_address_'+$this.data('copy-to')+'Province').val($('#msi_store_checkout_address_'+$this.data('copy-from')+'Province').val());
         $('#msi_store_checkout_address_'+$this.data('copy-to')+'Zip').val($('#msi_store_checkout_address_'+$this.data('copy-from')+'Zip').val());
         $('#msi_store_checkout_address_'+$this.data('copy-to')+'Country').val($('#msi_store_checkout_address_'+$this.data('copy-from')+'Country').val());
+    });
+})(jQuery);
+(function($) {
+    "use strict";
+    var address = null;
+    // load
+    $('a.msi_store_checkout_load_address').on('click', function(e) {
+        e.preventDefault();
+        var $this = $(this);
+        var $well = $this.closest('div.well');
+
+        address = $this.data('address');
+
+        $well.children().hide();
+        $well.css('background', 'url(/bundles/msicmf/img/ajax-loader3.gif) no-repeat center center #f5f5f5');
+
+        $.ajax("{{ path('msi_store_checkout_load_addresses') }}", {
+            success: function(data) {
+                $well.css('background', '#f5f5f5');
+                $well.children('.da-list')
+                    .html(data)
+                    .show();
+            }
+        });
+    });
+    // pick
+    $('form.msi_store_checkout_address').on('click', 'a.msi_store_checkout_pick_address', function(e) {
+        e.preventDefault();
+        var $this = $(this);
+        var $well = $this.closest('div.well');
+
+        $well.children().hide();
+        $well.css('background', 'url(/bundles/msicmf/img/ajax-loader3.gif) no-repeat center center #f5f5f5');
+
+        $.ajax("{{ path('msi_store_checkout_pick_address') }}", {
+            data: {
+                address: $(this).data('id')
+            },
+            success: function(data) {
+                $well.css('background', '#f5f5f5');
+
+                $('#msi_store_checkout_address_'+address+'FirstName').val(data.firstName);
+                $('#msi_store_checkout_address_'+address+'LastName').val(data.lastName);
+                $('#msi_store_checkout_address_'+address+'Email').val(data.email);
+                $('#msi_store_checkout_address_'+address+'Phone').val(data.phone);
+                $('#msi_store_checkout_address_'+address+'PhoneExt').val(data.phoneExt);
+                $('#msi_store_checkout_address_'+address+'Address').val(data.address);
+                $('#msi_store_checkout_address_'+address+'City').val(data.city);
+                $('#msi_store_checkout_address_'+address+'Province').val(data.province);
+                $('#msi_store_checkout_address_'+address+'Zip').val(data.zip);
+                $('#msi_store_checkout_address_'+address+'Country').val(data.country);
+
+                $well.children('.da-form').show();
+            }
+        });
     });
 })(jQuery);
 </script>
