--- a/Resources/views/Checkout/summary.html.twig
+++ b/Resources/views/Checkout/summary.html.twig
@@ -83,6 +83,8 @@
     <div class="span8">
         <h2>Payment Information</h2>
         // form de paiement
+        <br>
+        <a class="btn btn-large btn-primary" href="{{ path('msi_store_checkout_process') }}">Process</a>
     </div>
 </div>
 {% endblock %}
