--- a/Resources/views/ProductCategory/Admin/index.html.twig
+++ b/Resources/views/ProductCategory/Admin/index.html.twig
@@ -1,7 +1,7 @@
-{% extends 'MsiCmfBundle:Admin:index.html.twig' %}
+{% extends 'MsiAdminBundle:Admin:index.html.twig' %}
 
 {% block sidebar %}
-<ul id="sortable1" class="unstyled" data-url="{{ admin.genUrl('sort') }}">
+<ul id="sortable1" class="list-unstyled" data-url="{{ admin.genUrl('sort') }}">
     {% for item in admin.grid.rows if item.lvl %}
         {% set l = loop.index %}
         <li id="{{ item.id }}" data-lvl="{{ item.lvl }}" data-lft="{{ item.lft }}" data-rgt="{{ item.rgt }}">
@@ -31,5 +31,5 @@
 
 {% block js %}
 {{ parent() }}
-<script src="{{ asset('bundles/msicmf/js/tree.js') }}"></script>
+<script src="{{ asset('bundles/msiadmin/js/tree.js') }}"></script>
 {% endblock js %}
